# mac-demo

./: .gitignore
book_researcher/: README.md  pyproject.toml
book_researcher/output/: genre_research.md  top_novelists.md  trending_books.md
book_researcher/src/book_researcher/: main.py
book_researcher/src/book_researcher/config/: tasks.yaml
engineering_team/: .env  .gitignore  pyproject.toml
engineering_team/output/: README.md  app.py  app1.py  mac_center.py  mac_center.py_design.md  mac_center.py_design1.md  mac_center1.py  test_mac_center.py  test_mac_center1.py
engineering_team/src/engineering_team/: crew.py  main.py
ezregistration/: README.md  pyproject.toml
ezregistration/output/: app.py  app_old.py  event_registration.py  event_registration.py_design.md  test_event_registration.py
ezregistration/src/ezregistration/: main.py
ezregistration/src/ezregistration/config/: agents.yaml
firstcrew/: README.md  pyproject.toml
firstcrew/src/firstcrew/: crew.py
mycoder/: README.md  pyproject.toml
mycoder/output/: code_and_output.txt
mycoder/src/mycoder/: crew.py  main.py
mycoder/src/mycoder/config/: agents.yaml
myresume/: .env  4_lab4.ipynb  README.md  app.py
myresume/me/: summary.txt
