[project]
name = "ezregistration"
version = "0.1.0"
description = "ezregistration using crewAI"
authors = [{ name = "Sajeed Ahmed", email = "asajeed@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "gradio>=6.2.0",
    "litellm>=1.75.3",
]

[project.scripts]
ezregistration = "ezregistration.main:run"
run_crew = "ezregistration.main:run"
train = "ezregistration.main:train"
replay = "ezregistration.main:replay"
test = "ezregistration.main:test"
run_with_trigger = "ezregistration.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
